assets/css/style.css
/* ... */
.menu-toggle {
  color: #fff;
  cursor: pointer;
  font-size: 25px;
  position: fixed;
  right: 25px;
  top: 25px;
}

#menu-toggle {
    z-index: 999;
    cursor: pointer;
    position: fixed;
    top: 0;
    left: 0;
    color: #054c77;
    background-color: #fff;
    width: 60px;
    height: 60px;
    text-align: center;
    display: inline-block;
    line-height: 60px;
}

.menu-close {
  cursor: pointer;
}

#menu-close {
    cursor: pointer;
    text-align: right;
    color: #054c77;
    background-color: #fff;
    width: 100%;
    height: 60px;
    text-align: center;
    display: inline-block;
    line-height: 60px;
}


/* Section */

.section {
    color: #fff;
    width: 55%;
    right: 10%;
    left: 35%;
    position: relative;
    padding-bottom: 80px;
    border-bottom: 3px solid rgba(250, 250, 250, 0.25);
}

.section-heading {
    text-align: center;
    padding: 80px 45px;
}

.section-heading h2 {
    font-size: 32px;
    font-weight: 700;
    color: #fff;
}

.section-heading .line-dec {
    width: 60px;
    height: 3px;
    background-color: #054c77;
    margin: 10px auto;
}

.section-heading span {
    margin-top: 5px;
    font-size: 32px;
    color: #fff;
    letter-spacing: 0.5px;
}


/* Buttons */

.white-button a {
    display: inline-block;
    padding: 12px 20px;
    background-color: #fff;
    color: #054c77;
    font-size: 13px;
    font-weight: 800;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    transition: all 0.5s;
}

.white-button a:hover {
    background-color: #054c77;
    color: #fff;
}

button {
    display: inline-block;
    padding: 10px 20px;
    background-color: #fff;
    color: #054c77;
    font-size: 12px;
    font-weight: 800;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    transition: all 0.5s;
    border: none;
    outline: none;
    cursor: pointer;
}

button:hover {
    outline: none;
    background-color: #054c77;
    color: #fff;
}


/* Left & Right Post */

.right-image-post {
    margin-top: 30px;
    padding-top: 30px;
}

.left-image img,
.right-image img {
    border-radius: 5px;
}

.right-image-post h4,
.left-image-post h4 {
    margin-top: 30px;
}

.right-image-post h5,
.left-image-post h5 {
    margin-top: 10px;
}

.right-image-post p,
.left-image-post p {
    margin-top: 20px;
}

.right-image-post .white-button,
.left-image-post .white-button {
    margin-top: 30px;
}


/* Services */

.my-services .col-md-6 {
    padding-left: 5px;
    padding-right: 5px;
}

.service-item {
    margin-bottom: 10px;
    padding: 50px;
    background-color: rgba(250, 250, 250, 0.1);
    transition: all 0.5s;
}

.service-item h4 {
    transition: all 0.5s;
}

.service-item p {
    transition: all 0.5s;
}

.service-item:hover {
    background-color: rgba(250, 250, 250, 1);
}

.service-item:hover h4 {
    color: #1e1e1e;
}

.service-item:hover p {
    color: #4a4a4a;
}

.service-item .service-icon {
    width: 70px;
    height: 70px;
    display: inline-block;
    margin-bottom: 30px;
    background-size: cover;
    background-repeat: no-repeat;
    transition: all 0.5s;
}

.service-item .first-service-icon {
    background-image: url(../images/first-white-icon.png);
}

.service-item:hover .first-service-icon {
    background-image: url(../images/first-main-icon.png);
}

.service-item .second-service-icon {
    background-image: url(../images/second-white-icon.png);
}

.service-item:hover .second-service-icon {
    background-image: url(../images/second-main-icon.png);
}

.service-item .third-service-icon {
    background-image: url(../images/third-white-icon.png);
}

.service-item:hover .third-service-icon {
    background-image: url(../images/third-main-icon.png);
}

.service-item .fourth-service-icon {
    background-image: url(../images/fourth-white-icon.png);
}

.service-item:hover .fourth-service-icon {
    background-image: url(../images/fourth-main-icon.png);
}


/* My Work */

section.my-work .section-heading {
    text-align: center;
    padding: 80px 45px 50px 45px;
}

.isotope-wrapper {
    position: relative;
    width: 100%;
    margin: auto;
}

.isotope-toolbar input[type="radio"] {
    display: none;
}

.isotope-toolbar span {
    text-transform: capitalize;
    display: inline-block;
    margin-right: 15px;
    padding-bottom: 3px;
    font-size: 15px;
    font-weight: 700;
    border-bottom: 2px solid transparent;
    transform: ease-in-out 0.5s;
    cursor: pointer;
}

.isotope-toolbar input[type="radio"]:checked + span {
    color: #054c77;
    border-bottom: 2px solid #054c77;
}

.isotope-box {
    position: relative;
    width: 100%;
}

.isotope-toolbar {
    text-align: center;
    margin: 10px;
}

.isotope-toolbar p {
    border-top: 1px solid #fff;
    padding-top: 15px;
}

.isotope-toolbar a {
    color: #fff;
}

.isotope-item {
    position: relative;
    width: 48%;
    margin: 1%;
    border-bottom: 2px solid rgba(250,250,250,0.1);
    padding-bottom: 30px;
    margin-bottom: 30px;
}

.isotope-item img {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 5px;
}

.lazyload {
    background: #f7f7f7;
}

.lazyloading {
    background: #f7f7f7 url(//afarkas.github.io/lazysizes/assets/imgs/loader.gif) no-repeat center;
    min-height: 60px;
}

figure.snip1321 {
  overflow: hidden;
  text-align: center;
  -webkit-perspective: 50em;
  perspective: 50em;
}
figure.snip1321 * {
  -webkit-box-sizing: padding-box;
  box-sizing: padding-box;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}
figure.snip1321 figcaption {
  top: 50%;
  left: 20px;
  right: 20px;
  position: absolute;
  opacity: 0;
  z-index: 1;
}
figure.snip1321 h4 {
    margin-top: 15px;
  margin-bottom: 5px;
  color: #232323;
}
figure.snip1321 span {
    font-size: 14px;
    font-style: italic;
    display: block;
    color: #7a7a7a;
}
/* ... */

